# uniclaw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  taplo.toml
.cargo/: config.toml
.github/workflows/: ci.yml
RFCS/: 0001-receipt-format.md
constitutions/: solo-dev.toml
crates/uniclaw-approval/: Cargo.toml
crates/uniclaw-approval/src/: lib.rs
crates/uniclaw-budget/: Cargo.toml
crates/uniclaw-budget/src/: budget.rs  error.rs  lease.rs  lib.rs
crates/uniclaw-budget/tests/: composition.rs
crates/uniclaw-constitution/: Cargo.toml
crates/uniclaw-constitution/src/: evaluator.rs  lib.rs  parse.rs  rule.rs  verdict.rs
crates/uniclaw-constitution/tests/: solo_dev.rs
crates/uniclaw-explain/: Cargo.toml
crates/uniclaw-explain/src/: lib.rs  main.rs  render.rs
crates/uniclaw-explain/tests/: cli.rs
crates/uniclaw-host/: Cargo.toml
crates/uniclaw-host/examples/: end-to-end-demo.rs
crates/uniclaw-host/src/: api.rs  clock.rs  lib.rs  signer.rs  verify.html
crates/uniclaw-host/tests/: api.rs
crates/uniclaw-kernel/: Cargo.toml
crates/uniclaw-kernel/src/: event.rs  kernel.rs  leaf.rs  lib.rs  outcome.rs  state.rs  traits.rs
crates/uniclaw-kernel/tests/: chain.rs
crates/uniclaw-receipt/: Cargo.toml
crates/uniclaw-receipt/src/: lib.rs
crates/uniclaw-receipt/tests/: vectors.rs
crates/uniclaw-receipt/tests/vectors/: canonical-v2.json
crates/uniclaw-router/: Cargo.toml
crates/uniclaw-router/src/: cli.rs  lib.rs  orchestrate.rs  router.rs
crates/uniclaw-router/tests/: round_trip.rs
crates/uniclaw-sleep/: Cargo.toml
crates/uniclaw-sleep/src/: lib.rs
crates/uniclaw-store/: Cargo.toml
crates/uniclaw-store-sqlite/: Cargo.toml
crates/uniclaw-store-sqlite/src/: lib.rs
crates/uniclaw-store/src/: lib.rs  log.rs  memory.rs
crates/uniclaw-store/tests/: integration.rs
crates/uniclaw-tools/: Cargo.toml
crates/uniclaw-tools-wasm/: Cargo.toml
crates/uniclaw-tools-wasm/src/: bindings.rs  host.rs  lib.rs  limits.rs  tool.rs
crates/uniclaw-tools-wasm/tests/: host_imports.rs
crates/uniclaw-tools-wasm/tests/fixtures/: http-tool-component.wasm
crates/uniclaw-tools-wasm/tests/fixtures/http-tool-component/: BUILD.md  Cargo.toml
crates/uniclaw-tools-wasm/tests/fixtures/http-tool-component/src/: lib.rs
crates/uniclaw-tools-wasm/tests/fixtures/http-tool-component/wit/: tool.wit
crates/uniclaw-tools-wasm/wit/: tool.wit
crates/uniclaw-tools/src/: capability.rs  host.rs  lib.rs  noop.rs  tool.rs
crates/uniclaw-verify/: Cargo.toml
crates/uniclaw-verify/examples/: mint-sample.rs
crates/uniclaw-verify/src/: main.rs
crates/uniclaw-verify/tests/: round_trip.rs
docs/: 01-what-is-uniclaw.md  02-uniclaw-vs-openclaw.md  03-roadmap.md  README.md
docs/steps/: 00-foundation-receipts.md  01-kernel-state-machine.md  02-constitution-engine.md  03-capability-budgets.md  04-receipt-explainer.md  05-approval-engine.md  06-channel-aware-routing.md  07-receipt-store.md  08-light-sleep.md  09-public-url-hosting.md  10-sqlite-receipt-store.md  11-deep-sleep.md  12-html-verifier.md  13-tool-foundation.md  16c-wasm-host-imports.md  19a-key-id-field.md  20-end-to-end-demo.md  20a-typescript-verifier.md  21-http-proposal-api.md  22-typescript-client.md  24-python-client.md  25-bearer-token-auth.md
