[workspace]
resolver = "2"
members = [
    "crates/uniclaw-receipt",
    "crates/uniclaw-verify",
    "crates/uniclaw-kernel",
    "crates/uniclaw-constitution",
    "crates/uniclaw-budget",
    "crates/uniclaw-explain",
    "crates/uniclaw-approval",
    "crates/uniclaw-router",
    "crates/uniclaw-store",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
authors = ["Uniclaw Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/uniclaw/uniclaw"
homepage = "https://uniclaw.dev"
readme = "README.md"
keywords = ["agent", "ai", "verifiable", "wasm", "security"]
categories = ["command-line-utilities", "cryptography"]

[workspace.dependencies]
# Crypto + encoding (kept tiny — verifier must stay ≤ 200 LOC equivalent).
blake3 = { version = "1.5", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "fast"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# CLI for uniclaw-verify.
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
anyhow = { version = "1.0", default-features = false, features = ["std"] }

# Internal members.
uniclaw-receipt = { path = "crates/uniclaw-receipt", version = "0.0.1" }
uniclaw-kernel = { path = "crates/uniclaw-kernel", version = "0.0.1" }
uniclaw-constitution = { path = "crates/uniclaw-constitution", version = "0.0.1" }
uniclaw-budget = { path = "crates/uniclaw-budget", version = "0.0.1" }
uniclaw-explain = { path = "crates/uniclaw-explain", version = "0.0.1" }
uniclaw-approval = { path = "crates/uniclaw-approval", version = "0.0.1" }
uniclaw-router = { path = "crates/uniclaw-router", version = "0.0.1" }
uniclaw-store = { path = "crates/uniclaw-store", version = "0.0.1" }

# --- Lints (apply to every workspace member) ---
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions that are noise rather than signal.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# --- Profiles ---
# Pattern adopted from ZeroClaw — engineered for size and edge hardware.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Crypto deps must compile with full optimization or Ed25519 verify slows ~30x.
# (Size discipline still applies to our own crates and most deps.)
[profile.release.package.ed25519-dalek]
opt-level = 3

[profile.release.package.curve25519-dalek]
opt-level = 3

[profile.release.package.sha2]
opt-level = 3

[profile.release.package.blake3]
opt-level = 3

# Faster builds for development without sacrificing release discipline.
[profile.release-fast]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16

# Reproducible distribution build.
[profile.dist]
inherits = "release"
debug = false
incremental = false

# Faster CI — thin LTO is fast enough.
[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 8
