[package]
name = "uniclaw-budget"
description = "Capability budget algebra for Uniclaw — leases that compose on delegation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true

[lints]
workspace = true
