[package]
name = "uniclaw-constitution"
description = "Constitution engine for Uniclaw — human-readable rules judged before the policy gate."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uniclaw-receipt.workspace = true
serde.workspace = true
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }

[lints]
workspace = true
