[package]
name = "uniclaw-host"
description = "Public-URL receipt hosting for Uniclaw — serves uniclaw://receipt/<hash> over HTTP."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uniclaw-receipt.workspace = true
uniclaw-store.workspace = true
uniclaw-store-sqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
anyhow.workspace = true
clap.workspace = true

[dev-dependencies]
uniclaw-receipt = { workspace = true, features = ["crypto"] }
ed25519-dalek = { workspace = true }
blake3.workspace = true

[lints]
workspace = true

[[bin]]
name = "uniclaw-host"
path = "src/bin/uniclaw-host.rs"
