[package]
name = "uniclaw-kernel"
description = "Trusted runtime core for Uniclaw — the verifiable agent kernel."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uniclaw-receipt = { workspace = true, features = ["crypto"] }
uniclaw-constitution.workspace = true
uniclaw-budget.workspace = true
uniclaw-approval.workspace = true
uniclaw-sleep.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true

[dev-dependencies]
uniclaw-receipt = { workspace = true, features = ["crypto"] }
ed25519-dalek = { workspace = true }

[lints]
workspace = true
