[package]
name = "uniclaw-sleep"
description = "Sleep stages for Uniclaw — Light/REM/Deep Sleep cleanup, reflection, and promotion."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[lints]
workspace = true
