[package]
name = "uniclaw-sleep"
description = "Sleep stages for Uniclaw — Light/REM/Deep Sleep cleanup, reflection, and promotion."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uniclaw-receipt.workspace = true
uniclaw-store.workspace = true

[dev-dependencies]
uniclaw-receipt = { workspace = true, features = ["crypto"] }
ed25519-dalek = { workspace = true }
blake3.workspace = true
serde_json.workspace = true

[lints]
workspace = true
