[package]
name = "uniclaw-store-sqlite"
description = "SQLite-backed ReceiptLog implementation for Uniclaw."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uniclaw-receipt = { workspace = true, features = ["crypto"] }
uniclaw-store.workspace = true
rusqlite.workspace = true
serde_json.workspace = true

[dev-dependencies]
ed25519-dalek = { workspace = true }
blake3.workspace = true
tempfile = "3"

[lints]
workspace = true
