[package]
name = "uniclaw-tools-wasm"
description = "WebAssembly tool runtime for Uniclaw — sandboxed Tool implementations via wasmtime, with fuel/memory/wall-clock limits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uniclaw-receipt.workspace = true
uniclaw-tools.workspace = true
# 16c uses HttpFetchTool from uniclaw-tools-http to back the guest's
# `http-fetch` host import. Same instance, same capability allowlist,
# same SSRF gate as a direct host-side HttpFetchTool::call.
uniclaw-tools-http.workspace = true
# 16c uses the SecretBroker trait for the guest's `secret-exists`
# host import. Existence-only check; the value never reaches the
# guest.
uniclaw-secrets.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
# Used by the host-side `http-fetch` impl to decode HttpFetchTool's
# base64-encoded body for the guest. Same crate uniclaw-tools-http
# already pulls in.
base64.workspace = true
# `wat` is a regular dep (not dev-only) because [`WasmTool::from_wat`]
# in the public API takes WAT text and compiles it inline. Production
# deployments that load .wasm bytes directly via `from_module_bytes`
# don't pay the parser's runtime cost — `wat::parse_str` is only
# called when WAT input is given. Keeping it as a regular dep simply
# means the parser machinery is *available* in the linked binary.
# Tradeoff is dep tree size; future tuning can move this behind a
# feature flag if a deployment needs to slim down.
wat.workspace = true

[lints]
workspace = true
