[package]
name = "uniclaw-tools"
description = "Tool execution architecture for Uniclaw — Tool trait, capability declarations, and the host registry."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
uniclaw-receipt.workspace = true
blake3.workspace = true

[lints]
workspace = true
