[package]
name = "uniclaw-verify"
description = "Standalone verifier for Uniclaw receipts. ≤ 200 LOC, no kernel dependencies."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "uniclaw-verify"
path = "src/main.rs"

[dependencies]
uniclaw-receipt.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
clap.workspace = true
anyhow.workspace = true

[lints]
workspace = true
