[package]
name = "http-tool-component"
description = "Test fixture for Uniclaw step 16c — a Rust→WASM Component that implements `uniclaw:tool/tool-with-host` and exercises the host-import surface (http-fetch + secret-exists + log-message + now-millis). NOT a workspace member; built ahead of time via `cargo component build --release`."
version = "0.0.1"
edition = "2024"
publish = false

# Outside the host workspace — see BUILD.md for details.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Same versions as echo-component fixture (matches cargo-component
# 0.21's generated bindings).
wit-bindgen = "0.41"
wit-bindgen-rt = { version = "0.41", features = ["bitflags"] }

[package.metadata.component]
package = "uniclaw:tool"

[package.metadata.component.target]
path = "wit"
world = "tool-with-host"

# Size discipline for the produced .wasm.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
